# AddRoutes

./: .gitignore  ChangeLog  README.md  __init__.py  blemote.py  blender_manifest.toml  data.py  g_vars.py  load_save.py  midi.py  pyproject.toml
addroutes/: __init__.py  blemote_devices.py  data.py  midi_devices.py  osc.py  osc_devices.py  ui.py
addroutes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
